welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:5: error: '=' expected but identifier found.
def ado(a:Int)/Boolean = {
              ^loneTeen:8: error: illegal start of simple expression
 }
 ^